--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,6 +20,16 @@
             <label>Last name:</label>
             <p><%= @user.last_name.present? ? @user.last_name : "Not provided" %></p>
           </div>
+          <% if is_teacher?(@user) %>
+            <div class="form-group">
+              <label>Teacher Description:</label>
+              <p><%= @user.description.present? ? @user.description : "Not provided" %></p>
+            </div>
+            <div class="form-group">
+              <label>Teacher Passion:</label>
+              <p><%= @user.passion.present? ? @user.passion : "Not provided" %></p>
+            </div>
+          <% end %>
           <div class="form-group">
             <label>Gender:</label>
             <p><%= !@user.male.nil? ? (@user.male == true ? 'Male' : "Female") : "Not provided" %></p>
@@ -54,6 +64,16 @@
               <%= f.label :male, 'GENDER' %>
               <%= f.select :male, [['Male', true],['Female', false]], {include_blank: true}, { class: 'form-control' }%>
             </div>
+            <% if is_teacher?(@user) %>
+              <div class="form-group">
+                <%= f.label :description, "TEACHER DESCRIPTION" %>
+                <%= f.text_area :description, class: 'form-control' %>
+              </div>
+              <div class="form-group">
+                <%= f.label :passion, "Passion" %>
+                <%= f.select :passion, Passion.all.map{|passion| passion.title.capitalize},{include_blank: true},class: 'form-control' %>
+              </div>
+            <% end %>
             <div class="red-back">
               <span>Edit this fields only if you want to change your password!</span>
               <div class="form-group">
