price to challenges

--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -81,6 +81,7 @@
               <p class="card-text">
                 <%= trainer.description %>
               </p>
+              <button type="button" name="button" class="btn btn-primary">Book me</button>
               <p class="card-foot">- <%= trainer.passion %> -</p>
             </div>
           </div>
