--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -81,7 +81,7 @@
               <p class="card-text">
                 <%= trainer.description %>
               </p>
-              <button type="button" name="button" class="btn btn-primary">Book me</button>
+              <%= render 'charges/new_payment', :trainer => trainer %>
               <p class="card-foot">- <%= trainer.passion %> -</p>
             </div>
           </div>
