finalize payment function

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,3 +120,6 @@ a.btn-green:hover, button.btn-green:hover{
   border-color: transparent;
   color: white;
 }
+.stripe-button-el span{
+  display: none !important;
+}
