--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,14 @@
-<h2>Thanks, you paid <strong>$<%= @show_amount %>.00</strong>!</h2>
+<div class="container" style="margin-top: 150px; margin-bottom: 350px;">
+  <div class="row justify-content-md-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>Thanks, you paid <strong>$<%= @show_amount %>.00</strong> for <%= @challenges.map{|challenge| challenge.title.capitalize }.join(', ') %>.</p>
+            <footer class="blockquote-footer"><cite title="Source Title">Neuro Linguistic Bootcamps</cite></footer>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
