--- a/app/assets/stylesheets/pages/pages.scss
+++ b/app/assets/stylesheets/pages/pages.scss
@@ -10,16 +10,16 @@ $main-color: #7302A1;
   color: #ffffff;
   .main-text{
     font-family: 'Lusitana', serif;
-    font-size: 54px;
+    font-size: 66px;
     line-height: 72px;
-    text-shadow: 0 1px 3px rgba(0,0,0,0.25);
+    text-shadow: 0 3px 3px rgba(0, 0, 0, 1);
+    margin: 20px 0px 30px 0px;
   }
   .secondary-text{
-    font-size: 19px;
+    font-size: 25px;
     line-height: 28px;
-    margin: 20px 0px 30px 0px;
     font-weight: 600;
-    text-shadow: 0 1px 3px rgba(0,0,0,0.25);
+    text-shadow: 0 3px 3px rgba(0, 0, 0, 1);
   }
   .paragraph{
     font-size: 16px;
@@ -30,13 +30,13 @@ $main-color: #7302A1;
   }
 }
 .overlay {
-    height: 85vh;
-    width: 100%;
-    position: absolute;
-    overflow: hidden;
-    top: 0px;
-    left: 0px;
-    background: rgba(57, 1, 80, 0.2); /*can be anything, of course*/
+  height: 85vh;
+  width: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 0px;
+  left: 0px;
+  background: rgba(57, 1, 80, 0.2); /*can be anything, of course*/
 }
 .challenges{
   font-family: 'Lusitana', serif;
@@ -73,32 +73,8 @@ p.paragraph{
 .card-img-top-programming{
   height: 175px;
 }
-.rounded-image{
-  border-radius: 50%;
-  width: 250px;
-  height: 250px;
-  align-self: center;
-}
 .card-foot{
   font-size: 12px;
   line-height: 28px;
   color: $third-text;
-}
-#trainers{
-  .card{
-    border: none;
-  }
-  .fa{
-    padding-left: 5px;
-    padding-right: 5px;
-    color: $third-text;
-    font-size: 14px;
-    line-height: 36px;
-  }
-  .badge{
-    transform: translateY(-25px);
-    box-shadow: 3px 5px 15px rgba(0, 0, 0, 0.25);
-    padding-left: 25px;
-    padding-right: 25px;
-  }
 }
