--- a/app/assets/stylesheets/pages/trainers.scss
+++ b/app/assets/stylesheets/pages/trainers.scss
@@ -32,3 +32,62 @@ $green: #6b8c51;
     width: 350px;
   }
 }
+#trainers{
+  .card{
+    box-shadow: 3px 5px 15px rgba(0, 0, 0, 0.25);
+  }
+  .rounded-image{
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    align-self: center;
+  }
+  .trainer-title{
+    font-size: 24px;
+    line-height: 26px;
+    color: $second-text;
+  }
+  .trainer-text{
+    font-size: 14px;
+    line-height: 23px;
+    color: $second-text;
+  }
+  .amount{
+    font-size: 14px;
+    line-height: 23px;
+    color: $second-text;
+  }
+  .inner-card{
+    border-radius: 0.4rem;
+    background-color: #F8F8F8;
+    padding: 5px 10px;
+    margin: 3px;
+  }
+  .inner-card-main-text{
+    font-size: 10px;
+    text-transform: uppercase;
+    line-height: 17px;
+    color: $second-text;
+  }
+  .inner-card-text{
+    font-size: 14px;
+    line-height: 23px;
+    color: $second-text;
+  }
+  .fa-graduation-cap, .fa-book{
+    font-size: 25px;
+    line-height: 42px;
+    color: $third-text;
+  }
+  .fa-star{
+    color: #FFBD44;
+    font-size: 20px;
+    line-height: 20px;
+  }
+  .badge{
+    transform: translateY(-25px);
+    box-shadow: 3px 5px 15px rgba(0, 0, 0, 0.25);
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
