--- a/app/views/passions/show.html.erb
+++ b/app/views/passions/show.html.erb
@@ -2,12 +2,11 @@
   <div class="overlay"></div>
   <div class="row justify-content-md-center d-flex h-100">
     <div class="col-md-8 content align-self-center">
-      <div align="center" class="main-text"><%= @passion.title.capitalize %> Bootcamp</div>
-      <div align="center" class="secondary-text">Learn AND Teach!</div>
-      <div align="center" class="paragraph">FOLLOW-ALONG  SELF-PRACTISE TEAM-CHALLENGE</div>
+      <div align="center" class="secondary-text">Learn AND Teach</div>
+      <div align="center" class="main-text"><%= @passion.title.capitalize %></div>
       <div align="center">
         <%= link_to "Sign up now!", new_user_registration_path, class: 'btn btn-primary' %>
-        <%= link_to "Find private trainer", '#', class: 'btn btn-secondary' %>
+        <%= link_to "1:1 training", nlbc_trainers_path, class: 'btn btn-secondary' %>
       </div>
     </div>
   </div>
