--- a/app/views/charges/_new_payment.html.erb
+++ b/app/views/charges/_new_payment.html.erb
@@ -13,7 +13,7 @@
   <script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-description="Selected challenges: <%= params[:challenges].present? ? params[:challenges].count : 0 %>"
-          data-amount="<%= (params[:challenges].present? ? Challenge.where(id: params[:challenges]).map{|challenge| challenge.price}.compact.inject(:+) : 0) * 100 %>"
+          data-amount="<%= ((params[:challenges].present? ? Challenge.where(id: params[:challenges]).map{|challenge| challenge.price}.compact.inject(:+) : 0) ||= 0)  * 100 %>"
           data-locale="auto">
   </script>
 <% end %>
