--- a/app/assets/stylesheets/pages/pages.scss
+++ b/app/assets/stylesheets/pages/pages.scss
@@ -12,14 +12,14 @@ $main-color: #7302A1;
     font-family: 'Lusitana', serif;
     font-size: 66px;
     line-height: 72px;
-    text-shadow: 0 3px 3px rgba(0, 0, 0, 1);
+    text-shadow: 0 4px 3px black;
     margin: 20px 0px 30px 0px;
   }
   .secondary-text{
     font-size: 25px;
     line-height: 28px;
     font-weight: 600;
-    text-shadow: 0 3px 3px rgba(0, 0, 0, 1);
+    text-shadow: 0 4px 3px black;
   }
   .paragraph{
     font-size: 16px;
