--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,7 +70,7 @@ a:hover{
   cursor: pointer;
 }
 // PRIMARY BUTTON
-a.btn-primary, input[type="submit"], button.btn-primary, button.stripe-button-el {
+a.btn-primary, input[type="submit"], button.btn-primary {
   @extend .button-configuration;
   background: #7302A1;
   border: 1px solid #fff;
@@ -122,6 +122,6 @@ a.btn-green:hover, button.btn-green:hover{
   border-color: transparent;
   color: white;
 }
-.stripe-button-el span{
-  display: none !important;
+button.stripe-button-el, .stripe-button-el span{
+  display: none;
 }
