align homepage text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,3 +125,6 @@ a.btn-green:hover, button.btn-green:hover{
 button.stripe-button-el, .stripe-button-el span{
   display: none;
 }
+.align-self-bottom{
+  align-self: flex-end;
+}
