--- a/app/views/nlbc/index.html.erb
+++ b/app/views/nlbc/index.html.erb
@@ -2,8 +2,7 @@
 <div id="index-cover" class="jumbotron">
   <div class="overlay"></div>
   <div class="row justify-content-md-center d-flex h-100">
-    <div class="col-md-8 content align-self-center">
-      <div align="center" class="main-text">The fastest way to learn the basics of anything and  unlock your passions.</div>
+    <div class="col-md-8 content align-self-bottom">
       <div align="center" class="secondary-text">Discover our unique and fun learning method</div>
       <div align="center" class="paragraph">Choose a passion and sign up for free.</div>
     </div>
