--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -1,67 +1,84 @@
+<div id="trainer-filters">
+  <%= form_for nlbc_trainers_path, method: :get do %>
+  <div class="row justify-content-md-left">
+    <div class="">
+      <div class="dropdown trainer-filtering">
+        <button id="passionButton" class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Passion
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <% @passions.each do |passion| %>
+          <div class="dropdown-item">
+            <label id="passion__<%=passion.id%>">
+              <%= radio_button_tag('passions[]', passion.id, false, onClick: "Challenges(this);")%>
+              <%= passion.title.capitalize %>
+            </label>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
+    <div class="">
+      <div class="dropdown trainer-filtering">
+        <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Challenge
+        </button>
+        <div id="challenges_drop" class="dropdown-menu drop-menu" aria-labelledby="dropdownMenuButton">
+          <% @challenges.each do |challenge| %>
+          <div class="dropdown-item">
+            <div class="checkbox">
+              <label>
+                <%= check_box_tag 'challenges[]', challenge.id %>
+                <span class="cr"><i aria-hidden="true" class="cr-icon fa fa-check"></i></span>
+                <%= challenge.title.capitalize %>
+              </label>
+            </div>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
+    <div class="">
+      <div class="dropdown trainer-filtering">
+        <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Location
+        </button>
+        <div class="dropdown-menu drop-menu" aria-labelledby="dropdownMenuButton">
+          <% @locations.each do |location| %>
+          <div class="dropdown-item">
+            <label>
+              <%= check_box_tag 'locations[]', location %>
+              <%= location.capitalize %>
+            </label>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
+    <div class="">
+      <%= submit_tag 'Choose your trainer', class: 'btn btn-sm' %>
+    </div>
+  </div>
+  <% end %>
+</div>
+
+<% if params[:challenges].present? %>
+  <div class="selected-filters">
+    <a href="<%= nlbc_trainers_path %>"><span class="badge badge-pill badge-theme">Clear</span></a>
+    <% @challenges_names.each do |challenge| %>
+      <span class="badge badge-pill badge-light"><%= challenge.last %> <a href="<%= nlbc_trainers_path(:challenges => params[:challenges].map{|id| id unless id == "#{challenge.first}"}.compact) %>"><i class="fa fa-times" aria-hidden="true"></i></a></span>
+    <% end %>
+  </div>
+<% end %>
+
 <div class="container">
   <p align="center" class="paragraph" style="margin: 40px auto 40px auto;">
     Find your on demand private trainer. The content will be the same but every teacher can add their own specialty and support and extra challenges. We advice to follow a bootcamp first, but individual training is possible without.
   </p>
   <p align="center" class="paragraph" style="margin: -20px auto 20px auto;">Meet the people who make learning fun!</p>
-</div>
-
-<div id="trainer-filters" class="container col-md-6">
-  <%= form_for nlbc_trainers_path, method: :get do %>
-  <div class="row justify-content-md-center">
-    <div class="dropdown trainer-filtering">
-      <button id="passionButton" class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Passion
-      </button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <% @passions.each do |passion| %>
-        <div class="dropdown-item">
-          <label id="passion__<%=passion.id%>">
-            <%= radio_button_tag('passions[]', passion.id, false, onClick: "Challenges(this);")%>
-            <%= passion.title.capitalize %>
-          </label>
-        </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
-  <div class="row justify-content-md-center">
-    <div class="dropdown trainer-filtering">
-      <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Challenge
-      </button>
-      <div id="challenges_drop" class="dropdown-menu drop-menu" aria-labelledby="dropdownMenuButton">
-        <% @challenges.each do |challenge| %>
-        <div class="dropdown-item">
-          <label>
-            <%= check_box_tag 'challenges[]', challenge.id %>
-            <%= challenge.title.capitalize %>
-          </label>
-        </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
-  <div class="row justify-content-md-center">
-    <div class="dropdown trainer-filtering">
-      <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Location
-      </button>
-      <div class="dropdown-menu drop-menu" aria-labelledby="dropdownMenuButton">
-        <% @locations.each do |location| %>
-        <div class="dropdown-item">
-          <label>
-            <%= check_box_tag 'locations[]', location %>
-            <%= location.capitalize %>
-          </label>
-        </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
-  <div class="row justify-content-md-center">
-    <%= submit_tag 'Choose your trainer', class: 'btn btn-sm' %>
-  </div>
-  <% end %>
 </div>
 
 <div id="trainers">
@@ -157,7 +174,7 @@
       success: function (data) {
         $("#challenges_drop")[0].innerHTML = "";
         data.forEach(function (item) {
-          $("#challenges_drop")[0].innerHTML += '<div class="dropdown-item"><label><input type="checkbox" name="challenges[]" id="challenges_" value="' + item[0] + '"> ' + item[1] + '</label></div>'
+          $("#challenges_drop")[0].innerHTML += '<div class="dropdown-item"><div class="checkbox"><label><input type="checkbox" name="challenges[]" id="challenges_" value="' + item[0] + '"> <span class="cr"><i aria-hidden="true" class="cr-icon fa fa-check"></i></span>' + item[1] + '</label></div></div>'
         });
       }
     });
