--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -49,7 +49,7 @@
           <% @locations.each do |location| %>
           <div class="dropdown-item">
             <label>
-              <%= check_box_tag 'locations[]', location %>
+              <%= radio_button_tag('locations[]', passion.id, false)%>
               <%= location.capitalize %>
             </label>
           </div>
@@ -92,7 +92,14 @@
               <div class="row">
                 <div class="col-md-3">
                   <div class="row justify-content-md-center">
-                    <%= image_tag (trainer.avatar.present? ? trainer.avatar.url(:thumb) : 'missing.png'), class: 'rounded-image' %>
+                    <div class="col-sm-12">
+                      <%= image_tag (trainer.avatar.present? ? trainer.avatar.url(:thumb) : 'missing.png'), class: 'rounded-image' %>
+                    </div>
+                    <% if trainer.city %>
+                      <div align="center" class="col-md-12">
+                        <i class="fa fa-map-marker" aria-hidden="true"></i> <%= trainer.city.capitalize %>
+                      </div>
+                    <% end %>
                   </div>
                 </div>
                 <div class="col-md-9">
