--- a/app/assets/stylesheets/pages/trainers.scss
+++ b/app/assets/stylesheets/pages/trainers.scss
@@ -87,6 +87,9 @@ $green: #6b8c51;
     line-height: 42px;
     color: $third-text;
   }
+  .city-location{
+    color: $third-text;
+  }
   .fa-star{
     color: #FFBD44;
     font-size: 20px;
