--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -96,7 +96,7 @@
                       <%= image_tag (trainer.avatar.present? ? trainer.avatar.url(:thumb) : 'missing.png'), class: 'rounded-image' %>
                     </div>
                     <% if trainer.city %>
-                      <div align="center" class="col-md-12">
+                      <div align="center" class="col-md-12 city-location">
                         <i class="fa fa-map-marker" aria-hidden="true"></i> <%= trainer.city.capitalize %>
                       </div>
                     <% end %>
