bugfix capitalize method on nil

--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -126,7 +126,7 @@
                         </div>
                         <div class="col-md-9">
                           <div class="inner-card-main-text">Passion</div>
-                          <div class="inner-card-text"><%= trainer.passion.capitalize %></div>
+                          <div class="inner-card-text"><%= trainer.passion.capitalize if trainer.passion %></div>
                         </div>
                       </div>
                     </div>
