--- a/app/assets/stylesheets/pages/trainers.scss
+++ b/app/assets/stylesheets/pages/trainers.scss
@@ -9,6 +9,7 @@ $orange: #ef9929;
 $light-green: #c3bb35;
 $green: #6b8c51;
 #trainer-filters{
+  background: white;
   width: 100%;
   border: 1px solid #F2F2F2;
   height: 50px;
