--- a/app/views/nlbc/teach.html.erb
+++ b/app/views/nlbc/teach.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <div class="card" style="width: 100%;">
+        <div class="card pop" style="width: 100%;">
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3 money-card">
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="card" style="width: 100%;">
+        <div class="card pop" style="width: 100%;">
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3 work-card">
@@ -51,7 +51,7 @@
 
     <div class="row">
       <div class="col-md-6">
-        <div class="card" style="width: 100%;">
+        <div class="card pop" style="width: 100%;">
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3 time-card">
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="card" style="width: 100%;">
+        <div class="card pop" style="width: 100%;">
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3 flexibility-card">
@@ -100,7 +100,7 @@
 
     <div class="row">
       <div class="col-md-6">
-        <div class="card" style="width: 100%;">
+        <div class="card pop" style="width: 100%;">
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3 international-card">
@@ -123,7 +123,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="card" style="width: 100%;">
+        <div class="card pop" style="width: 100%;">
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3 guy-card">
@@ -149,7 +149,7 @@
 
     <div class="row">
       <div class="col-md-6">
-        <div class="card" style="width: 100%;">
+        <div class="card pop" style="width: 100%;">
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3 guy-card">
@@ -172,7 +172,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="card" style="width: 100%;">
+        <div class="card pop" style="width: 100%;">
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3 guy-card">
