--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,7 @@ $light-green: #c3bb35;
 $green: #6b8c51;
 
 html,body{
+  background: #F2F2F2;
   margin: 0px;
   padding: 0px;
   height: 100%;
@@ -48,7 +49,9 @@ html,body{
 body{
   font-family: 'Open Sans', sans-serif;
 }
-
+.jumbotron{
+  background: #F2F2F2;
+}
 a{
   color: #656565;
   transition: color 0.2s ease-in-out;
