--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,12 @@ html,body{
 body{
   font-family: 'Open Sans', sans-serif;
 }
+div, p, h1, h2, h3, h4, h5, h6, span{
+  letter-spacing: 0.5px;
+}
+a, button{
+  letter-spacing: 0px;
+}
 .jumbotron{
   background: #F2F2F2;
 }
