--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,8 +1,16 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// text colors
+$first-text: #111111;
+$second-text: #656565;
+$third-text: #959595;
+// ui colors
 $main-color: #7302A1;
-
+$light-purple: #9f3d89;
+$orange: #ef9929;
+$light-green: #c3bb35;
+$green: #6b8c51;
 nav a {
   display: block;
   font-size: 1.3rem;
@@ -34,14 +42,28 @@ nav a {
   }
 }
 #cover-stripe{
-  height: 300px;
+  height: 500px;
   background: $main-color;
   color: #fff;
+  letter-spacing: 1.1px;
   .content{
     padding-top: 100px;
   }
+  .stripe-title{
+    font-size: 25px;
+    line-height: 20px;
+    color: white;
+    margin: 40px;
+  }
+  .stripe-footer{
+    font-weight: 200;
+    color: white;
+    margin: 20px;
+  }
   p{
-    font-weight: 600;
+    font-weight: 200;
+    height: 150px;
+    text-align: center;
   }
   a.btn-primary {
     box-sizing: border-box;
