--- a/app/views/nlbc/index.html.erb
+++ b/app/views/nlbc/index.html.erb
@@ -8,11 +8,47 @@
     </div>
   </div>
 </div>
+
 <div id="cover-stripe">
-  <div class="container">
-    <div class="row justify-content-md-center content">
-      <p align="center">A passionista is someone who is so passionate about something and want to show their passion and help others become passionate it also.</p>
-      <%= link_to "Become a Passionista!", new_user_registration_path, class:"btn btn-primary" %>
+  <div class="container d-flex h-100">
+    <div class="align-self-center">
+      <div class="row justify-content-sm-center">
+        <div align="center" class="stripe-title">Practise can be boring, but not if you do it efficiently and with passionate people.</div>
+      </div>
+      <div class="row">
+        <div class="col" style="margin: 6px;">
+          <div class="row justify-content-sm-center">
+            <p>Our Bootcamps are the absolute fastest and fun way to learn.
+               We make sure the multiple challenges that you do will be stored to
+               your brain efficiently and that you engage with your fellow bootcampers.</p>
+            <%= link_to 'Find private teachers', nlbc_trainers_path, class:"btn btn-primary" %>
+          </div>
+        </div>
+        <div class="col" style="margin: 6px;">
+          <div class="row justify-content-sm-center">
+            <p>For some this is the best way to learn, because of the 1:1
+              individual attention. Out trainers are either experts in their field or
+              just a passionate person like you teaching what they have just learned.</p>
+            <%= link_to 'Follow Bootcamp', "#", class:"btn btn-primary" %>
+          </div>
+        </div>
+        <div class="col" style="margin: 6px;">
+          <div class="row justify-content-sm-center">
+            <p>There are 2 ways to become a trainer. Either you are already
+              knowledgable in your field and you can fill in the form and become
+              an instant trainer or you follow a challenge 3 times which automatically
+              gives you the option to become available as a trainer. </p>
+            <%= link_to 'Become a Trainer', "#", class:"btn btn-primary" %>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-sm-center">
+        <div align="center" class="stripe-footer">
+          By signing up to our platform and following any of
+          these options, you become a passionist which comes with all
+          passionista privileges!</div>
+      </div>
     </div>
+
   </div>
 </div>
