--- a/app/views/nlbc/teach.html.erb
+++ b/app/views/nlbc/teach.html.erb
@@ -197,59 +197,5 @@
     </div>
   </div>
 
-  <div class="container">
-    <h1 class="faq">Frequently Asked Questions</h1>
-
-    <div id="exampleAccordion" data-children=".item">
-      <div class="item">
-        <button class="toggle-button" data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion1" aria-expanded="true" aria-controls="exampleAccordion1">
-          What is NLBC ? <i class="fa fa-chevron-down pull-right" aria-hidden="true"></i>
-        </button>
-        <div id="exampleAccordion1" class="collapse show" role="tabpanel">
-          <p class="mb-3 toggle-text">
-            Nlbc is a platform to learn the skills of a passion in a face2face format in either a bootcamp or 1:1 training. 
-          </p>
-        </div>
-      </div>
-
-      <hr>
-      <div class="item">
-        <button class="toggle-button" data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion2" aria-expanded="false" aria-controls="exampleAccordion2">
-          Where do I teach ?  <i class="fa fa-chevron-down pull-right" aria-hidden="true"></i>
-        </button>
-        <div id="exampleAccordion2" class="collapse" role="tabpanel">
-          <p class="mb-3 toggle-text">
-            You can teach in any place you are located. Don’t forget to update your location in the myProfile settings! 
-          </p>
-        </div>
-      </div>
-
-      <hr>
-      <div class="item">
-        <button class="toggle-button" data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion3" aria-expanded="false" aria-controls="exampleAccordion3">
-          What is a passion ? <i class="fa fa-chevron-down pull-right" aria-hidden="true"></i>
-        </button>
-        <div id="exampleAccordion3" class="collapse" role="tabpanel">
-          <p class="mb-3 toggle-text">
-            A passion is something we like to spend our time on. Either we love learning the skills or we
-            like the community that loves the same passion or we got inspired by someone who is passionate about it. 
-          </p>
-        </div>
-      </div>
-
-      <hr>
-      <div class="item">
-        <button class="toggle-button" data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion4" aria-expanded="false" aria-controls="exampleAccordion4">
-          What is a challenge ? <i class="fa fa-chevron-down pull-right" aria-hidden="true"></i>
-        </button>
-        <div id="exampleAccordion4" class="collapse" role="tabpanel">
-          <p class="mb-3 toggle-text">
-            When you break down a passion structurally, we get small learnable chunks of information or
-            muscle memories. These are individual skills that belong to a passion. Learning different challenges
-            will make you adept at a passion and naturally will make you even more passionate about it.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
+<%= render 'faq' %>
 </div>
