--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,15 +37,19 @@
     <!--[if lt IE 9]> <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript"></script> <![endif]-->
   </head>
   <body>
-    <%= render 'shared/navbar' %>
-    <%= render 'shared/alerts' %>
-    <div class="row">
-      <div class="col-md-12">
-        <%= yield %>
+    <div class="preload"></div>
+    <div class="main-content">
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/alerts' %>
+      <div class="row">
+        <div class="col-md-12">
+          <%= yield %>
+        </div>
       </div>
+      <!--/row-->
+      <%= render 'shared/footer' %>
     </div>
-    <!--/row-->
-    <%= render 'shared/footer' %>
+
     <%= render 'shared/sign_up_modal' unless current_user %>
     <%= render 'shared/sign_in_modal' unless current_user %>
   </body>
