--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,6 +35,9 @@
           <li class="nav-item">
             <a class="nav-link" href="<%= nlbc_teach_path %>">Teach</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="<%= nlbc_enterprise_path %>">Enterprise</a>
+          </li>
           <% if current_user %>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="Javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
